# Azure-IoT-Rust-Sample

./: Cargo.toml  README.md  build.rs  dockerfile  wrapper.h
src/: main.rs
