[package]
name = "hw"
version = "0.1.0"
authors = ["Mark Radbourne <markrad@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "*"

[dependencies]
paho-mqtt = "0.7.1"
base64 = "0.12.3"
hmac-sha256 = "0.1.6"